# sarvamcode

./: .gitignore  main.py  pyproject.toml
.sarvam/: memory.json
src/: __init__.py  agent.py  cli.py  utils.py
src/sarvam_os/: __init__.py  agent.py  main.py  memory.py  tools.py
src/utils/: calculator.py
