[project]
name = "sarvam"
version = "0.1.0"
description = "A local AI coding agent CLI powered by Sarvam-M"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "openai>=1.0.0",
    "pathspec>=0.12.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sarvam = "src.cli:app"
sarvam-os = "src.sarvam_os.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
